Colaboratory를 통해 생성됨

--- a/6.CHATBOT/chapter06.ipynb
+++ b/6.CHATBOT/chapter06.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter06.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOl+hV0LyOTXtf4bNBROMeu",
+      "authorship_tag": "ABX9TyMQ5OwHlLjyUq5noRLcJMs0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1556,6 +1556,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4hOf8h9Pvp3T"
+      },
+      "source": [
+        "- 손실 함수와 정확도 측정 함수를 살펴보자.\n",
+        "  - 최적화로 아담을 사용한다.\n",
+        "  - 크로스 엔트로피로 손실 값을 측정한다.\n",
+        "  - 정확도 측정으로 지표를 결정한다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "poBOCDN8ePAM"
@@ -1601,12 +1613,13 @@
       },
       "source": [
         "class seq2seq(tf.keras.Model):\n",
+        "    # 인코더와 디코더를 생성할 때 필요하다.\n",
         "    def __init__(self, vocab_size, embedding_dim, enc_units, dec_units, batch_sz, end_token_idx=2):    \n",
         "        super(seq2seq, self).__init__()\n",
         "        self.end_token_idx = end_token_idx\n",
         "        self.encoder = Encoder(vocab_size, embedding_dim, enc_units, batch_sz) \n",
         "        self.decoder = Decoder(vocab_size, embedding_dim, dec_units, batch_sz) \n",
-        "\n",
+        "    # 인코더의 입력값과 디코더의 입력값을 x를 통해 받는다.\n",
         "    def call(self, x):\n",
         "        inp, tar = x\n",
         "        \n",
@@ -1621,7 +1634,7 @@
         "            predictions, dec_hidden, _ = self.decoder(dec_input, dec_hidden, enc_output)\n",
         "            predict_tokens.append(tf.dtypes.cast(predictions, tf.float32))   \n",
         "        return tf.stack(predict_tokens, axis=1)\n",
-        "    \n",
+        "    # 사용자의 입력에 대한 모델의 결괏값을 확인하기 위해 테스트 목적으로 만들어진 함수\n",
         "    def inference(self, x):\n",
         "        inp  = x\n",
         "\n",
@@ -1647,6 +1660,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fSMdrT1rwiJa"
+      },
+      "source": [
+        "- seq2seq를 만들어본다."
+      ]
     },
     {
       "cell_type": "code",
@@ -1676,15 +1698,19 @@
         "id": "KoJWOUNAeWVT"
       },
       "source": [
+        "# 체크포인트가 저장된 폴더를 만든다.\n",
         "PATH = DATA_OUT_PATH + MODEL_NAME\n",
         "if not(os.path.isdir(PATH)):\n",
         "        os.makedirs(os.path.join(PATH))\n",
         "        \n",
         "checkpoint_path = DATA_OUT_PATH + MODEL_NAME + '/weights.h5'\n",
-        "    \n",
+        "\n",
+        "# 두 개의 함수를 정의한다.\n",
+        "# 모델 체크포인트를 저장할 방법에 대한 함수    \n",
         "cp_callback = ModelCheckpoint(\n",
         "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)\n",
         "\n",
+        "# 학습을 빨리 끝내기 위한 earlystop_callback 함수\n",
         "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001, patience=10)\n",
         "\n",
         "history = model.fit([index_inputs, index_outputs], index_targets,\n",
@@ -1704,6 +1730,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XwOrjkMPw8nc"
+      },
+      "source": [
+        "- 정확도를 판단한다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Z7V_ej-oeZxg"
@@ -1713,6 +1748,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ms2kqkQ4w-QZ"
+      },
+      "source": [
+        "- 평가 손실값을 판단한다."
+      ]
     },
     {
       "cell_type": "code",
@@ -1731,7 +1775,8 @@
         "id": "Sczv1eavefxW"
       },
       "source": [
-        "- 결과 확인"
+        "- 결과 확인\n",
+        "  - 저장된 모델을 로드하는 방법을 보자"
       ]
     },
     {
@@ -1745,6 +1790,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HPxacUuzxT04"
+      },
+      "source": [
+        "- 학습이 잘 되었는지 확인해본다."
+      ]
     },
     {
       "cell_type": "code",
@@ -1764,12 +1818,80 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SUTCGtbjxk47"
+      },
+      "source": [
+        "query = \"나 오늘 소개팅하러가\"\n",
+        "\n",
+        "test_index_inputs, _ = enc_processing([query], char2idx)    \n",
+        "predict_tokens = model.inference(test_index_inputs)\n",
+        "print(predict_tokens)\n",
+        "\n",
+        "print(' '.join([idx2char[str(t)] for t in predict_tokens]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UEe6Wg16xsvs"
+      },
+      "source": [
+        "query = \"나 오늘 너무 힘들었잖아\"\n",
+        "\n",
+        "test_index_inputs, _ = enc_processing([query], char2idx)    \n",
+        "predict_tokens = model.inference(test_index_inputs)\n",
+        "print(predict_tokens)\n",
+        "\n",
+        "print(' '.join([idx2char[str(t)] for t in predict_tokens]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cYbilqtZxXra"
+      },
+      "source": [
+        "- 시퀀스 투 시퀀스 모델에 어텐션 기법을 추가한 모델을 만들어 챗봇 기능을 구현했다."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UeYMCimwepgj"
       },
       "source": [
         "## 05 transformer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bYskEm4exyiY"
+      },
+      "source": [
+        "- 트랜스포머 : 어텐션 구조만으로 전체 모델을 만들어 어텐션 기법의 중요성을 강조한다.\n",
+        "- 문장의 길이가 길어진 경우 순환 신경망의 한계를 해결하는 기법이 트랜스포머다.\n",
+        "- 각 단어 간의 유의미한 관계를 잡아내는 것도 트랜스포머가 기존 순환 신경망 기반의 시퀀스 투 시퀀스 모델보다 뛰어나다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PYTi49Pqych0"
+      },
+      "source": [
+        "### 셀프 어텐션\n",
+        "- 문장에서 각 단어끼리 얼마나 관계가 있는지를 계산해서 반영하는 방법\n",
+        "- 각 단어를 기준으로 다른 단어들과의 관계 값을 계산하는 것이 어텐션 스코어\n",
+        "- 어텐션 스코어 값을 하나의 테이블로 만든 것을 어텐션 맵\n",
+        "- 트랜스포머 모델에서는 단어 벡터끼리 내적 연산을 함으로써 어텐션 스코어를 구하였다.\n",
+        "- 이렇게 구한 어텐션 스코어에 대해 소프트맥스를 적용한 후 각 벡터와 곱한 후 전체 벡터를 더해서 해당 단어에 대해 문맥 벡터를 구한다."
       ]
     },
     {
@@ -1944,6 +2066,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "XIPagiV1zw27"
+      },
+      "source": [
+        "### 트랜스포머 네트워크의 전체 구조\n",
+        "- multi-head attention\n",
+        "- subsequent masked attention\n",
+        "- position-wise feed forward network\n",
+        "- residual connection"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YJziE9bT1EaM"
+      },
+      "source": [
+        "#### 멀티 헤드 어텐션\n",
+        "1. 스케일 내적 어텐션     \n",
+        "  중간에 크기를 조정하는 과정이 추가된 것이다.\n",
+        "2. 순방향 마스크 어텐션     \n",
+        "  자신보다 뒤에 있는 단어를 참고하지 않게 하는 기법    \n",
+        "  소프트맥스 함수에 매우 작은 음숫값을 넣는 경우 거의 0 값에 수렴하는 값을 갖게 된다.\n",
+        "3. 멀티 헤드 어텐션\n",
+        "  어텐션 맵을 여럿 만들어 다양한 특징에 대한 어텐션을 볼 수 있게 한 방법이다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "LzAxgqjBfATE"
       },
       "source": [
@@ -2020,10 +2171,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "S20aAXK93ECc"
+      },
+      "source": [
+        "#### 레지듀얼 커넥션"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xWrkhzuUfKHO"
       },
       "source": [
-        "- 포지셔널 인코딩"
+        "#### 포지셔널 인코딩"
       ]
     },
     {
@@ -2142,7 +2302,8 @@
         "id": "QxwYjPmFfTFN"
       },
       "source": [
-        "- 멀티헤드 어텐션"
+        "- 멀티헤드 어텐션\n",
+        "  - 어텐션 맵을 여럿 만들어 다양한 특징에 대한 어텐션을 볼 수 있게 한 방법이다."
       ]
     },
     {
@@ -2157,16 +2318,19 @@
         "        self.num_heads = kargs['num_heads']\n",
         "        self.d_model = kargs['d_model']\n",
         "\n",
+        "        # 나머지가 발생하면 안된다.\n",
         "        assert self.d_model % self.num_heads == 0\n",
         "\n",
         "        self.depth = self.d_model // self.num_heads\n",
         "\n",
+        "        # 스케일 내적 연산 이전에 입력한 입력한 key, query, value에 대한 차원 수를 맞추기 위한 레이어다.\n",
         "        self.wq = tf.keras.layers.Dense(kargs['d_model'])\n",
         "        self.wk = tf.keras.layers.Dense(kargs['d_model'])\n",
         "        self.wv = tf.keras.layers.Dense(kargs['d_model'])\n",
         "\n",
         "        self.dense = tf.keras.layers.Dense(kargs['d_model'])\n",
         "\n",
+        "    # key, query, value에 대한 벡터를 헤드 수만큼 분리할 수 있게 해주는 함수다.\n",
         "    def split_heads(self, x, batch_size):\n",
         "        \"\"\"Split the last dimension into (num_heads, depth).\n",
         "        Transpose the result such that the shape is (batch_size, num_heads, seq_len, depth)\n",
@@ -2208,7 +2372,8 @@
         "id": "DdPVpOZGfWG6"
       },
       "source": [
-        "- 포인트와이즈 피드포워드 네트워크"
+        "#### 포지션-와이즈 피드포워드 네트워크\n",
+        "- 위 수식과 같이 네트워크를 "
       ]
     },
     {
