Colaboratory를 통해 생성됨

--- a/6.CHATBOT/chapter06.ipynb
+++ b/6.CHATBOT/chapter06.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter06.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ5OwHlLjyUq5noRLcJMs0",
+      "authorship_tag": "ABX9TyPi0C6n3wMw0Tq4cUiu2ba7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2083,12 +2083,18 @@
       },
       "source": [
         "#### 멀티 헤드 어텐션\n",
+        "- 멀티 헤드 어텐션 : 내적 어텐션 구조가 중첩된 형태\n",
         "1. 스케일 내적 어텐션     \n",
-        "  중간에 크기를 조정하는 과정이 추가된 것이다.\n",
+        "  중간에 크기를 조정하는 과정이 추가된 것이다.    \n",
+        "  벡터의 차원이 너무 커지면 학습이 어려워지므로 벡터 크기에 반비례하게 만들어 크기를 조정한다.    \n",
+        "  query 행렬과 key 행렬에 대한 전치 행렬을 내적하고, 어텐션 스코어를 만든 다음 소프트맥스함수를 적용해 확률값으로 만든다.    \n",
+        "  이제 이 확률값을 각 value와 곱해서 가중합을 구한다.\n",
+        "\n",
         "2. 순방향 마스크 어텐션     \n",
         "  자신보다 뒤에 있는 단어를 참고하지 않게 하는 기법    \n",
         "  소프트맥스 함수에 매우 작은 음숫값을 넣는 경우 거의 0 값에 수렴하는 값을 갖게 된다.\n",
-        "3. 멀티 헤드 어텐션\n",
+        "  query 행렬과 key 행렬에 대한 전치 행렬을 내적한 이후, 아래쪽 삼각형을 제외한 부분은 음숫값으로 넣어 소프트맥스를 적용할 때 거의 0이 되도록 한다.\n",
+        "3. 멀티 헤드 어텐션    \n",
         "  어텐션 맵을 여럿 만들어 다양한 특징에 대한 어텐션을 볼 수 있게 한 방법이다."
       ]
     },
@@ -2117,6 +2123,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "stIQwvwSr7EM"
+      },
+      "source": [
+        "- 이후, 아래쪽 삼각형을 제외한 부분은 음숫값으로 넣어 소프트맥스를 적용할 때 거의 0이 되도록 한다."
+      ]
     },
     {
       "cell_type": "code",
@@ -2180,10 +2195,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "caZ1uXrzsCWz"
+      },
+      "source": [
+        "- 입력 정보 x가 있고, 네트워크 레이어를 거쳐 나온 F(x) 값이 있다고 하면 x + F(x)에 relu를 적용하여 앞에 있던 정보를 보존하는 것을 말한다.\n",
+        "- 인코딩 레이어에 들어가는 부분이다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xWrkhzuUfKHO"
       },
       "source": [
         "#### 포지셔널 인코딩"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CjyNs3Y6sgPw"
+      },
+      "source": [
+        "- 트랜스포머 모델에 순서 정보가 반영되지 않는 문제를 해결하기 위해서 사용한 기법\n",
+        "- 인덱스가 짝수인 경우에 사인 함숫값을 적용\n",
+        "- 인덱스가 홀수인 경우에 코사인 함숫값을 적용"
       ]
     },
     {
@@ -2397,7 +2433,15 @@
         "id": "cgbQ9R5ufaEg"
       },
       "source": [
-        "- 인코더 레이어"
+        "#### 인코더 레이어\n",
+        "- 각 모델의 입력값에 대한 정보를 추출한다.\n",
+        "- 인코더 모듈은 멀티 헤드 어텐션 레이어와 피드 포워드 네트워크를 네트워크로 한 레이어를 구성하고, \n",
+        "- 각 레이어에는 리지듀얼 커넥션이 함께 적용되어 있다.\n",
+        "- 인코더 레이어의 구성\n",
+        "  - 멀티 헤드 어텐션\n",
+        "  - 포지션 와이즈 피드 포워드 네트워크\n",
+        "  - 레이어 노멀라이제이션\n",
+        "  - 드롭아웃"
       ]
     },
     {
@@ -2439,7 +2483,9 @@
         "id": "Jbiglsssfc4b"
       },
       "source": [
-        "- 디코더 레이어"
+        "#### 디코더 레이어\n",
+        "- 인코더의 경우 하나의 블록이 2개의 레이어로 구성되어 있는데 디코더의 경우 총 3개의 레이어로 구성이 된다\n",
+        "- 두 개의 어텐션과 하나의 피드 포워드 레이어로 구성된다\n"
       ]
     },
     {
