Colaboratory를 통해 생성됨

--- a/6.CHATBOT/chapter06.ipynb
+++ b/6.CHATBOT/chapter06.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter06.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPi0C6n3wMw0Tq4cUiu2ba7",
+      "authorship_tag": "ABX9TyNg8vpvLnisNJTdS1pZIRFt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2409,7 +2409,7 @@
       },
       "source": [
         "#### 포지션-와이즈 피드포워드 네트워크\n",
-        "- 위 수식과 같이 네트워크를 "
+        "- 위 수식과 같이 네트워크를 네트워크를 구성하는 데 두 개의 리니어 레이어를 거치고 그 사이 활성화 함수로 relu를 활용한다."
       ]
     },
     {
