Colaboratory를 통해 생성됨

--- a/6.CHATBOT/chapter06.ipynb
+++ b/6.CHATBOT/chapter06.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter06.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNg8vpvLnisNJTdS1pZIRFt",
+      "authorship_tag": "ABX9TyMVEy4QlOBykopc+YC4TXYO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1471,7 +1471,8 @@
       "source": [
         "- 어텐션\n",
         "  - 어텐션이 추가된 방법은 은닉 상태의 값을 통해 어텐션을 계산하고, 디코더의 각 시퀀스 스텝마다 계산된 어텐션을 입력으로 넣는다.\n",
-        "  - 어텐션도 함께 학습을 진행하게 되며 학습을 통해 디코더의 각 시퀀스 스텝마다 어텐션의 가중치를 다르게 적용한다."
+        "  - 어텐션도 함께 학습을 진행하게 되며 학습을 통해 디코더의 각 시퀀스 스텝마다 어텐션의 가중치를 다르게 적용한다.\n",
+        "  - 어텐션 기법을 활용하기 때문에 문장의 길이가 길어져 이전의 내용을 기억하지 못하는 RNN의 문제를 일부 보강할 수 있었다."
       ]
     },
     {
@@ -1573,10 +1574,13 @@
         "id": "poBOCDN8ePAM"
       },
       "source": [
+        "# 최적화로 아담을 사용한다.\n",
         "optimizer = tf.keras.optimizers.Adam()\n",
         "\n",
+        "# 크로스엔트로피로 손실 값을 측정한다.\n",
         "loss_object = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True, reduction='none')\n",
         "\n",
+        "# 정확도 측정으로 지표를 결정한다.\n",
         "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='accuracy')\n",
         "\n",
         "def loss(real, pred):\n",
@@ -2409,7 +2413,7 @@
       },
       "source": [
         "#### 포지션-와이즈 피드포워드 네트워크\n",
-        "- 위 수식과 같이 네트워크를 네트워크를 구성하는 데 두 개의 리니어 레이어를 거치고 그 사이 활성화 함수로 relu를 활용한다."
+        "- 위 수식과 같이 네트워크를 "
       ]
     },
     {
@@ -2451,6 +2455,7 @@
       },
       "source": [
         "class EncoderLayer(tf.keras.layers.Layer):\n",
+        "    # 초기 설정하는 부분\n",
         "    def __init__(self, **kargs):\n",
         "        super(EncoderLayer, self).__init__()\n",
         "\n",
@@ -2463,11 +2468,14 @@
         "        self.dropout1 = tf.keras.layers.Dropout(kargs['rate'])\n",
         "        self.dropout2 = tf.keras.layers.Dropout(kargs['rate'])\n",
         "\n",
+        "    # 인코더 연산을 구현해보자.\n",
         "    def call(self, x, mask):\n",
+        "        # 멀티 헤드 어텐션 1, add & Norm, \n",
         "        attn_output, _ = self.mha(x, x, x, mask)  # (batch_size, input_seq_len, d_model)\n",
         "        attn_output = self.dropout1(attn_output)\n",
         "        out1 = self.layernorm1(x + attn_output)  # (batch_size, input_seq_len, d_model)\n",
         "\n",
+        "        # 멀티 헤드 어텐션 2, add & Norm\n",
         "        ffn_output = self.ffn(out1)  # (batch_size, input_seq_len, d_model)\n",
         "        ffn_output = self.dropout2(ffn_output)\n",
         "        out2 = self.layernorm2(out1 + ffn_output)  # (batch_size, input_seq_len, d_model)\n",
@@ -2514,15 +2522,18 @@
         "    \n",
         "    def call(self, x, enc_output, look_ahead_mask, padding_mask):\n",
         "        # enc_output.shape == (batch_size, input_seq_len, d_model)\n",
+        "        # 멀티헤드 어텐션, add & Norm\n",
         "        attn1, attn_weights_block1 = self.mha1(x, x, x, look_ahead_mask)  # (batch_size, target_seq_len, d_model)\n",
         "        attn1 = self.dropout1(attn1)\n",
         "        out1 = self.layernorm1(attn1 + x)\n",
         "\n",
+        "        # 멀티헤드 어텐션, add & Norm\n",
         "        attn2, attn_weights_block2 = self.mha2(\n",
         "            enc_output, enc_output, out1, padding_mask)  # (batch_size, target_seq_len, d_model)\n",
         "        attn2 = self.dropout2(attn2)\n",
         "        out2 = self.layernorm2(attn2 + out1)  # (batch_size, target_seq_len, d_model)\n",
         "\n",
+        "        # 피드포워드 네트워크 , add & Norm\n",
         "        ffn_output = self.ffn(out2)  # (batch_size, target_seq_len, d_model)\n",
         "        ffn_output = self.dropout3(ffn_output)\n",
         "        out3 = self.layernorm3(ffn_output + out2)  # (batch_size, target_seq_len, d_model)\n",
@@ -2538,7 +2549,7 @@
         "id": "98p0qBurffy1"
       },
       "source": [
-        "- 인코더"
+        "- 인코더 모듈을 구현해본다."
       ]
     },
     {
@@ -2551,26 +2562,32 @@
         "    def __init__(self, **kargs):\n",
         "        super(Encoder, self).__init__()\n",
         "\n",
+        "        # 인코더의 레이어 수, 포지션 임베딩 차원 수 \n",
         "        self.d_model = kargs['d_model']\n",
         "        self.num_layers = kargs['num_layers']\n",
         "\n",
+        "        # 워드 임베딩 레이어를 생성해 할당한다. \n",
         "        self.embedding = tf.keras.layers.Embedding(kargs['input_vocab_size'], self.d_model)\n",
         "        self.pos_encoding = positional_encoding(kargs['maximum_position_encoding'], \n",
         "                                                self.d_model)\n",
         "\n",
-        "\n",
+        "        # 가장 중요한 인코더 레이어는 레이어 개수만큼 인코더 레이어를 생성해서 할당한다.\n",
         "        self.enc_layers = [EncoderLayer(**kargs) \n",
         "                           for _ in range(self.num_layers)]\n",
         "\n",
+        "        # 드롭아웃 레이어를 생성한다.\n",
         "        self.dropout = tf.keras.layers.Dropout(kargs['rate'])\n",
         "\n",
         "    def call(self, x, mask):\n",
-        "\n",
+        "        # 입력 벡터에 대한 시퀀스 길이를 받는다.\n",
         "        seq_len = tf.shape(x)[1]\n",
         "\n",
-        "        # adding embedding and position encoding.\n",
+        "        # adding embedding and position encoding\n",
+        "        # 워드 임베딩을 할당받는다.\n",
         "        x = self.embedding(x)  # (batch_size, input_seq_len, d_model)\n",
+        "        # 가중치를 곱하는데 , 이 과정은 각 워드 임베딩에 대해 스케일을 맞추는 것이라고 보면 된다.\n",
         "        x *= tf.math.sqrt(tf.cast(self.d_model, tf.float32))\n",
+        "        # 포지션 임베딩 정보를 더하게 된다.\n",
         "        x += self.pos_encoding[:, :seq_len, :]\n",
         "\n",
         "        x = self.dropout(x)\n",
@@ -2612,6 +2629,7 @@
         "                           for _ in range(self.num_layers)]\n",
         "        self.dropout = tf.keras.layers.Dropout(kargs['rate'])\n",
         "\n",
+        "    # init 부분은 사실 같고, for 문에서 두 개의 블록을 추가로 입력한다는 것이 다르다.\n",
         "    def call(self, x, enc_output, look_ahead_mask, padding_mask):\n",
         "        seq_len = tf.shape(x)[1]\n",
         "        attention_weights = {}\n",
@@ -2625,6 +2643,7 @@
         "        for i in range(self.num_layers):\n",
         "            x, block1, block2 = self.dec_layers[i](x, enc_output, look_ahead_mask, padding_mask)\n",
         "\n",
+        "            # 여기 입력받는다는 점이 다르다.\n",
         "            attention_weights['decoder_layer{}_block1'.format(i+1)] = block1\n",
         "            attention_weights['decoder_layer{}_block2'.format(i+1)] = block2\n",
         "\n",
@@ -2681,6 +2700,7 @@
         "        enc_output = self.encoder(inp, enc_padding_mask)\n",
         "        \n",
         "        predict_tokens = list()\n",
+        "        # 디코더에 입력할 시퀀스를 매번 생성해내야 하는 것이 다르다.\n",
         "        for t in range(0, MAX_SEQUENCE):\n",
         "            dec_output, _ = self.decoder(tar, enc_output, look_ahead_mask, dec_padding_mask)\n",
         "            final_output = self.final_layer(dec_output)\n",
@@ -2703,7 +2723,8 @@
         "id": "XU_8x4lJfo3C"
       },
       "source": [
-        "- 모델 로스 정의"
+        "- 모델 로스 정의\n",
+        "  - 모델 학습을 위한 로스 함수 구현 및 모델 컴파일 등의 구현은 seq2seq와 사실 동일하다."
       ]
     },
     {
