Colaboratory를 통해 생성됨

--- a/7.PRETRAIN_METHOD/chapter07.ipynb
+++ b/7.PRETRAIN_METHOD/chapter07.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter07.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNzb85+rtyK8PI2PnlesVOJ",
+      "authorship_tag": "ABX9TyPFFRO4uqfuvWn48Apmh4eG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,24 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/waltechel/tensorflow-ml-nlp-tf2/blob/master/7.PRETRAIN_METHOD/chapter07.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8flEnxqUunT5"
+      },
+      "source": [
+        "# chapter07 사전학습 모델"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qanyt9FBuwIV"
+      },
+      "source": [
+        "## 01 버트"
       ]
     },
     {
