Colaboratory를 통해 생성됨

--- a/7.PRETRAIN_METHOD/chapter07.ipynb
+++ b/7.PRETRAIN_METHOD/chapter07.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter07.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNpi9PGGIs7ATBV9TZGRIO5",
+      "authorship_tag": "ABX9TyPyCNXqZt0oyeFeGqH21dj7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -438,11 +438,42 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IygEELSzdbD_"
+      },
+      "source": [
+        "len(train_data)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hltYT34ndiIY"
+      },
+      "source": [
+        "- 꽤 많은 시간이 든다. 그래서 데이터의 개수를 만 개로 줄여 냈다.\n",
+        "- 만 개는 한 에폭 당 1시간 30분 정도 소요된다\n",
+        "- 그래서 데이터의 개수를 조금 더 줄여서 천 개로 줄여 냈다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-cIUpxsHde2_"
+      },
+      "source": [
+        "train_data = train_data[:1000]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "P0XhQVKP5Ek0"
       },
       "source": [
-        "# train_data = train_data[:1000] # for test\n",
-        "\n",
         "input_ids = []\n",
         "attention_masks = []\n",
         "token_type_ids = []\n",
@@ -650,6 +681,37 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8YM01GFclNqJ"
+      },
+      "source": [
+        "- 테스트 데이터 너무 많아서 500개로 줄여냈다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7QJCKTUZlCIm"
+      },
+      "source": [
+        "len(test_data)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oyuobd-2lHUQ"
+      },
+      "source": [
+        "test_data = test_data[:500]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Q0_sJ9Fi9rFK"
@@ -826,6 +888,26 @@
       },
       "source": [
         "print('전체 train_data 개수: {}'.format(len(train_data)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JQMB4QMJe02D"
+      },
+      "source": [
+        "- 이것 역시 테스트의 목적으로 데이터를 조금 줄여내도록 한다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d-ZeinJ4e0Zr"
+      },
+      "source": [
+        "train_data = train_data[:1000]"
       ],
       "execution_count": null,
       "outputs": []
