--- a/6.CHATBOT/chapter06.ipynb
+++ b/6.CHATBOT/chapter06.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter06.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNyLDZhWF2U0rOM1kxFOuYY",
+      "authorship_tag": "ABX9TyMlAtk7xn0buK3XcjNWNiqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1085,7 +1085,7 @@
         "id": "6TiiJwPidRnN"
       },
       "source": [
-        "PATH = 'data_in/ChatBotData.csv'\n",
+        "PATH = 'data_in/ChatBotData.csv_small'\n",
         "VOCAB_PATH = 'data_in/vocabulary.txt'"
       ],
       "execution_count": null,
